--- a/style.css
+++ b/style.css
@@ -15,3 +15,15 @@ body {
     height: auto;
     border-radius: 5px;
 }
+
+input {
+    margin-top: 1rem;
+  }
+  
+  input::file-selector-button {
+    font-weight: bold;
+    color: dodgerblue;
+    padding: 0.5em;
+    border: thin solid grey;
+    border-radius: 3px;
+  }
