--- a/app/style.css
+++ b/app/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: #3B445F;
 }
+
 .settings {
     position: absolute;
     top: 25%;
@@ -29,12 +30,13 @@ body {
     position: relative;
     top: 30%;
     left: 0%;
-    width: auto;
-    height: auto;
-    padding: 50px;
-    background-color: #C1CCD9;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    height: 150px;
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: vertical;
 }
 
 .custom-button {
@@ -79,6 +81,7 @@ body {
 .email-object {
     position: relative;
     width: 100%;
+    height: 45px;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
@@ -87,11 +90,23 @@ body {
 }
 
 .email-list-diffusion {
+    flex: 1;
     position: relative;
+    height: 45px;
     width: 100%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
     resize: vertical;
+}
+
+.email-list-container {
+    display: flex;
+    align-items: center; /* Centrer verticalement les éléments */
+}
+
+#listImport{
+    width: 90px;
+    text-align: center;
 }
